@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.3-04
-Date: 2010-1-21
+Version: 1.3-05
+Date: 2010-6-28
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
